--- a/style.css
+++ b/style.css
@@ -9,7 +9,12 @@ html, body {
     align-items: center;
 }
 .container {
-    background-color: white;
-    width: 100px;
-    height: 100px;
+    background-color: rgb(78, 44, 44);
+    width: 200px;
+    height: 200px;
+}
+.grid {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
