--- a/style.css
+++ b/style.css
@@ -12,26 +12,34 @@ html, body {
 h1 {
     color: #D0B3FF;
     font-size: 5rem;
-    margin: 10px;
+    margin: 20px;
     text-shadow: 2px 10px 6px rgba(0, 0, 0, 0.7)
 
 }
 .buttons{
-    margin: 10px;
-    background-color: blueviolet;
-    gap: 100px;
-
+    display: flex;
+    height: 50px;
+    width: 200px;
+    margin: 20px;
+    justify-content: space-between;
+    gap: 30px;
+}
+button {
+    border-radius: 12px;
+    font-size: 24px;
+    font-style: bold;
+    padding: 5px 15px;
+    background-color: #D0B3FF;
+    color: #111820;
 }
 .container {
     width: auto;
 }
 .grid {
-    display: flex;
+    margin-top: 20px;
+    display: flex;  
     flex-wrap: wrap;
     flex-direction: row;
     width: 500px;
     height: 500px;
-}
-.grid_div :hover {
-    background-color: black;
 }
