--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ h1 {
     text-shadow: 2px 10px 6px rgba(0, 0, 0, 0.7)
 
 }
+h2 {
+  color: #D0B3FF;
+  font-size: 1.5rem;
+}
 .buttons{
     display: flex;
     height: 50px;
@@ -52,6 +56,7 @@ button:hover{
     display: flex;
     padding: 2rem;
     align-items: center;
+
 }
 .slider_value{
     color: #D0B3FF;
@@ -70,6 +75,7 @@ button:hover{
   display: block;
   transition: background 0.3s;
   cursor: pointer;
+  margin-left: 20px;
 }
 
 /* Chrome, Safari, Edge (WebKit) */
@@ -120,24 +126,8 @@ button:hover{
   transform: scale(1.2);
 }
 
-/*
-.slider{
-    width: 200px;
-    height: 10px;
-    background: #2b2f38;
-    border-radius: 50%;
-    outline: none;
-    margin: 20px auto;
-    display: block;
-    transition: background 0.3s;
+@media (max-width: 600px) {
+  h1 {
+    font-size: 2.5rem;
+  }
 }
-.slider::-webkit-slider-thumb{
-    height: 20px;
-    width: 20px;
-    background: #a78bfa; 
-    border-radius: 50%;
-    border: none;
-    box-shadow: 0 0 10px #a78bfa;
-    transition: transform 0.2s ease;
-}
-*/
