--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ h2 {
 }
 .buttons{
     display: flex;
-    height: 50px;
     width: 350px;
     margin: 20px;
     justify-content: space-between;
@@ -32,6 +31,7 @@ button {
     border-radius: 12px;
     font-size: 24px;
     font-style: bold;
+    width: 140px;
     padding: 5px 15px;
     background-color: #D0B3FF;
     color: #111820;
@@ -41,6 +41,14 @@ button {
 button:hover{
     transform: scale(1.03);
 }
+.btns1{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 5px;
+  align-items: center;
+}
+
 .container {
     width: auto;
 }
