--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html, body {
 h1 {
     color: #D0B3FF;
     font-size: 5rem;
-    margin: 20px;
+    margin: 25px;
     text-shadow: 2px 10px 6px rgba(0, 0, 0, 0.7)
 
 }
@@ -22,7 +22,7 @@ h2 {
 }
 .buttons{
     display: flex;
-    width: 350px;
+    width: auto;
     margin: 20px;
     justify-content: space-between;
     gap: 30px;
@@ -43,9 +43,9 @@ button:hover{
 }
 .btns1{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: space-between;
-  gap: 5px;
+  gap: 20px;
   align-items: center;
 }
 
@@ -53,7 +53,7 @@ button:hover{
     width: auto;
 }
 .grid {
-    margin: 20px;
+    margin: 25px;
     display: flex;  
     flex-wrap: wrap;
     flex-direction: row;
